--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "serve": "webpack-dev-server",
     "dev": "webpack --mode development --watch",
     "prod": "webpack --mode production"
   },
@@ -12,23 +13,27 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^9.6.0",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4"
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@progress/kendo-ui": "^2019.2.619",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.3.1",
     "countup.js": "^2.0.4",
     "datatables.net": "^1.10.19",
@@ -38,6 +43,7 @@
     "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
     "kendo-ui-core": "^2019.2.619",
+    "moment": "^2.24.0",
     "popper.js": "^1.15.0",
     "sweetalert2": "^8.12.2"
   }
