--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "datatables.net-bs4": "^1.10.19",
     "datatables.net-buttons": "^1.5.6",
     "datatables.net-buttons-bs4": "^1.5.6",
+    "datatables.net-responsive-bs4": "^2.2.3",
     "hamburgers": "^1.1.3",
     "jquery": "^3.4.1",
     "kendo-ui-core": "^2019.2.619",
