--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "author": "JCK",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^9.6.0",
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
+    "autoprefixer": "^9.6.1",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
@@ -22,12 +25,12 @@
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.7.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "terser-webpack-plugin": "^1.3.0",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.4",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
@@ -37,6 +40,7 @@
     "@progress/kendo-ui": "^2019.2.619",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.3.1",
+    "core-js": "^3.1.4",
     "countup.js": "^2.0.4",
     "datatables.net": "^1.10.19",
     "datatables.net-bs4": "^1.10.19",
@@ -48,6 +52,7 @@
     "kendo-ui-core": "^2019.2.619",
     "moment": "^2.24.0",
     "popper.js": "^1.15.0",
-    "sweetalert2": "^8.12.2"
+    "regenerator-runtime": "^0.13.2",
+    "sweetalert2": "^8.13.5"
   }
 }
