--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.10.1",
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@progress/kendo-ui": "^2019.2.619",
@@ -48,7 +49,11 @@
     "datatables.net-buttons-bs4": "^1.5.6",
     "datatables.net-responsive-bs4": "^2.2.3",
     "hamburgers": "^1.1.3",
+    "i18next": "^17.0.9",
+    "i18next-browser-languagedetector": "^3.0.2",
+    "i18next-xhr-backend": "^3.1.1",
     "jquery": "^3.4.1",
+    "jquery-i18next": "^1.2.1",
     "kendo-ui-core": "^2019.2.619",
     "moment": "^2.24.0",
     "popper.js": "^1.15.0",
